--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="game">
         <h2>Welcome, <span id="playerName"></span>!</h2>
         <p>Points: <span id="points">0</span></p>
-        <img id="face" src="Jimbo.png" alt="Dalius Face">
+        <img id="face" src="Jimbo.png">
         
         <h3>Upgrade:</h3>
         <button class="upgrade" onclick="buyUpgrade(1)"> Spead (5 Points)</button>
